kubernetes/Services/commentAPI.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-api
  template:
    metadata:
      labels:
        app: comment-api
    spec:
      containers:
        - name: comment-api
          image: olmantz/comment_api:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "2Gi"
              cpu: "2"
            limits:
              memory: "6Gi"
              cpu: "6"
---
apiVersion: v1
kind: Service
metadata:
  name: comment-api-service
spec:
  selector:
    app: comment-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
