kubernetes/Services/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  labels:
    app: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
      - name: gateway-service
        image: olmantz/sublime_gateway:kube-local-default
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
            cpu: "128m"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: LoadBalancer
  selector:
    app: gateway-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
# # Local -> image tag set to latest
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: gateway-service
#   namespace: ingress-nginx
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: gateway-service
#   template:
#     metadata:
#       labels:
#         app: gateway-service
#     spec:
#       containers:
#         - name: gateway-service
#           image: olmantz/sublime_gateway:latest
#           imagePullPolicy: Always
#           ports:
#             - containerPort: 80
#               name: http
#           env:
#             - name: PORT
#               value: "80"
#           resources:
#             limits:
#               memory: "64Mi"
#               cpu: "128m"

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: gateway-service
#   namespace: ingress-nginx
# spec:
#   # type: LoadBalancer
#   selector:
#     app: gateway-service
#   ports:
#     - port: 80
#       targetPort: 80
