kubernetes/Services/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres
spec:
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
                - name: postgres
                  image: postgres:latest
                  ports:
                      - containerPort: 5432
                  resources:
                      requests:
                          memory: "512Mi"
                          cpu: "500m"
                      limits:
                          memory: "1Gi"
                          cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
    name: postgres
spec:
    selector:
        app: postgres
    ports:
        - protocol: TCP
          port: 5432
          targetPort: 5432
